<resources>
    <string name="app_name">chatApp-client</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="remind_password">Remind password</string>
    <string name="log_in">Log in</string>
    <string name="remember">Remember</string>
    <string name="change_password">change password</string>
    <string name="logout">logout</string>
    <string name="actual_password">Actual password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="search">Search</string>
    <string name="finded_users">Finded users:</string>
    <string name="message">Message..</string>
    <string name="send">Send</string>
</resources>